name:                my-xmonad
version:             0.1.0.0
license:             BSD3
author:              Eric Bataille
maintainer:          e.c.p.bataille@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  -- other-modules lists custom modules in my .xmonad/lib/ directory
  default-extensions:
    GADTs
    ExistentialQuantification
  other-modules:       Keybinds
  hs-source-dirs:      lib
  build-depends:       base
                     , containers
                     , xmonad >= 0.17
                     , xmonad-contrib >= 0.17
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded
